Implementa testes para Rating e revisa os demais testes